<resources>
    <string name="app_name">soro</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="registre">Créer un compte</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="token_key_map">pk.eyJ1Ijoic2V5ZG91bmlhciIsImEiOiJjanAwaXdqZmgwNDZmM2ttcTM2dTJtM2syIn0.WlUsz5IOX1b0t4frckL9gg</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_confirm_password">This password not equals</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_registry">RegistryActivity</string>

    <string name="action_setting">Account Setting</string>
    <string name="action_logout">Logout</string>
    <string name="setup_hint_name">Your name</string>
    <string name="menu_add_lieu">Ajouter un lieu</string>
    <string name="v_mnu_supp">supprimer</string>
    <string name="view_map">map</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo_lieu">lieu</string>

</resources>
